[package]
name = "demo-web-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
serde = "1.0.144"
serde_json = "1.0.85"
tokio = { version = "1", features = ["full"] }
axum = "0.5.16"
axum-server = { version = "0.4.2", features = ["tls-rustls"] }
reqwest = { version = "0.11", features = ["json"] }
